syntax = "proto3";
package pb;
option go_package = "internal/infra/grpc/pb";

message Blank {}

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

message OrderResponse {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
}

message ListOrderResponse {
  repeated OrderResponse orders = 1;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc ListOrder(Blank) returns (ListOrderResponse);
}
